# mlflow-recipes-poc

./: .gitignore  README.md  pyproject.toml  recipe.yaml
notebooks/: databricks.py
profiles/: databricks.yaml  databricks.yml
steps/: ingest.py  train.py  transform.py
